--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,7 @@
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.11.0",
+    "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.18"
   }
