--- a/package.json
+++ b/package.json
@@ -12,69 +12,70 @@
     "@babel/preset-typescript": "^7.3.3",
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
-    "@testing-library/react": "^8.0.5",
+    "@testing-library/react": "^9.1.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/body-parser": "^1.17.0",
-    "@types/cors": "^2.8.5",
+    "@types/body-parser": "^1.17.1",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/dotenv-webpack": "^1.7.0",
-    "@types/express": "^4.17.0",
+    "@types/express": "^4.17.1",
     "@types/friendly-errors-webpack-plugin": "^0.1.2",
     "@types/graphql": "^14.2.3",
     "@types/html-webpack-plugin": "^3.2.1",
-    "@types/i18next": "^12.1.0",
-    "@types/jest": "^24.0.15",
-    "@types/jsonwebtoken": "^8.3.2",
-    "@types/node": "^12.6.8",
-    "@types/react": "^16.8.23",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-redux": "^7.1.1",
+    "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.3.3",
+    "@types/node": "^12.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
+    "@types/socket.io": "^2.1.2",
+    "@types/socket.io-client": "^1.4.32",
     "@types/terser-webpack-plugin": "^1.2.1",
-    "@types/webpack": "^4.32.0",
+    "@types/webpack": "^4.39.0",
     "@types/webpack-dev-middleware": "^2.0.3",
     "@types/webpack-dev-server": "^3.1.7",
     "@types/webpack-node-externals": "^1.6.3",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-typescript-metadata": "^0.2.2",
-    "concurrently": "^4.1.1",
-    "css-loader": "^3.1.0",
-    "dotenv": "^8.0.0",
+    "concurrently": "^4.1.2",
+    "css-loader": "^3.2.0",
+    "dotenv": "^8.1.0",
     "dotenv-webpack": "^1.7.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^6.2.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.13.6",
+    "eslint-plugin-jest": "^22.15.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "^4.1.0",
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin-alt": "^0.4.14",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^4.0.0-beta.5",
-    "husky": "^3.0.1",
+    "husky": "^3.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
+    "jest": "^24.9.0",
     "jest-transform-stub": "^2.0.0",
-    "lerna": "^3.16.2",
-    "lint-staged": "^9.2.0",
+    "lerna": "^3.16.4",
+    "lint-staged": "^9.2.3",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^1.18.2",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-css-modules": "^1.4.0",
     "stylelint-config-recommended": "^2.2.0",
-    "terser-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
     "url-loader": "^2.1.0",
-    "webpack": "^4.37.0",
+    "webpack": "^4.39.2",
     "webpack-dev-middleware": "^3.7.0",
-    "webpack-dev-server": "^3.7.2",
+    "webpack-dev-server": "^3.8.0",
     "webpack-node-externals": "^1.7.2"
   },
   "scripts": {
