--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -2,14 +2,14 @@
   "name": "antr-client",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.3",
-    "date-fns": "^2.0.0-beta.2",
-    "graphql": "^14.4.2",
-    "i18next": "^17.0.6",
-    "react": "^16.8.6",
-    "react-apollo": "^2.5.8",
-    "react-dom": "^16.8.6",
-    "react-i18next": "^10.11.4",
+    "apollo-boost": "^0.4.4",
+    "date-fns": "^2.0.0",
+    "graphql": "^14.5.0",
+    "i18next": "^17.0.12",
+    "react": "^16.9.0",
+    "react-apollo": "^3.0.1",
+    "react-dom": "^16.9.0",
+    "react-i18next": "^10.12.2",
     "react-redux": "^7.1.0",
     "react-router5": "^7.1.0",
     "redux": "^4.0.4",
@@ -17,6 +17,7 @@
     "refract-rxjs": "^4.2.1",
     "router5": "^7.0.2",
     "router5-plugin-browser": "^7.0.2",
-    "rxjs": "^6.5.2"
+    "rxjs": "^6.5.2",
+    "socket.io-client": "^2.2.0"
   }
 }
