--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,16 +2,17 @@
   "name": "antr-server",
   "private": true,
   "dependencies": {
-    "apollo-server-express": "^2.7.0",
+    "apollo-server-express": "^2.8.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "graphql": "^14.4.2",
+    "graphql": "^14.5.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^2.2.0",
     "typeorm": "^0.2.18"
   }
 }
