--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -9,5 +9,10 @@
       "jsx": true
     }
   },
-  "plugins": ["react", "react-hooks", "jsx-a11y"]
+  "plugins": ["react", "react-hooks", "jsx-a11y"],
+  "settings": {
+    "react": {
+      "version": "latest"
+    }
+  }
 }
