--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
     "strictBindCallApply": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": true,
     "target": "esnext"
   }
 }
