--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-redux": "^7.1.2",
     "@types/socket.io": "^2.1.2",
     "@types/socket.io-client": "^1.4.32",
+    "@types/supertest": "^2.0.8",
     "@types/terser-webpack-plugin": "^1.2.1",
     "@types/webpack": "^4.39.0",
     "@types/webpack-dev-middleware": "^2.0.3",
@@ -69,6 +70,7 @@
     "stylelint": "^10.1.0",
     "stylelint-config-css-modules": "^1.4.0",
     "stylelint-config-recommended": "^2.2.0",
+    "supertest": "^4.0.2",
     "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
