--- a/package.json
+++ b/package.json
@@ -86,10 +86,10 @@
     "bootstrap": "lerna bootstrap",
     "start": "concurrently \"npm:start:client\" \"npm:start:server\" ",
     "build": "concurrently \"npm:build:client\" \"npm:build:server\" ",
-    "start:client": "ts-node scripts/client/start.ts",
-    "start:server": "ts-node scripts/server/start.ts",
-    "build:client": "ts-node scripts/client/build.ts",
-    "build:server": "ts-node scripts/server/build.ts",
+    "start:client": "ts-node client/scripts/start.ts",
+    "start:server": "ts-node server/scripts/start.ts",
+    "build:client": "ts-node client/scripts/build.ts",
+    "build:server": "ts-node server/scripts/build.ts",
     "test": "jest --config jest.config.json",
     "test:watch": "jest --config jest.config.json --watch",
     "test:watchAll": "jest --config jest.config.json --watchAll",
