--- a/client/package.json
+++ b/client/package.json
@@ -2,22 +2,24 @@
   "name": "antr-client",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.4.4",
-    "date-fns": "^2.0.0",
-    "graphql": "^14.5.0",
-    "i18next": "^17.0.12",
-    "react": "^16.9.0",
-    "react-apollo": "^3.0.1",
-    "react-dom": "^16.9.0",
-    "react-i18next": "^10.12.2",
-    "react-redux": "^7.1.0",
-    "react-router5": "^7.1.0",
-    "redux": "^4.0.4",
-    "refract-redux-rxjs": "^1.4.0",
-    "refract-rxjs": "^4.2.1",
-    "router5": "^7.0.2",
-    "router5-plugin-browser": "^7.0.2",
-    "rxjs": "^6.5.2",
-    "socket.io-client": "^2.2.0"
+    "date-fns": "2.8.1",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-redux": "7.1.3",
+    "react-router5": "7.1.0",
+    "redux": "4.0.4",
+    "refract-redux-rxjs": "1.4.1",
+    "refract-rxjs": "4.2.3",
+    "router5": "7.0.2",
+    "router5-plugin-browser": "7.0.2",
+    "rxjs": "6.5.3"
+  },
+  "devDependencies": {
+    "@testing-library/react": "9.3.2",
+    "@types/node": "12.12.12",
+    "@types/react": "16.9.13",
+    "@types/react-dom": "16.9.4",
+    "@types/react-redux": "7.1.5",
+    "@types/testing-library__react": "9.1.2"
   }
 }
