--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,21 @@
   "name": "antr-server",
   "private": true,
   "dependencies": {
-    "apollo-server-express": "^2.8.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
-    "express": "^4.17.1",
-    "graphql": "^14.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.17.1",
-    "reflect-metadata": "^0.1.13",
-    "socket.io": "^2.2.0",
-    "typeorm": "^0.2.18"
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.19.0",
+    "cors": "2.8.5",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "jsonwebtoken": "8.5.1",
+    "mysql": "2.17.1",
+    "reflect-metadata": "0.1.13",
+    "typeorm": "0.2.20"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "2.4.2",
+    "@types/body-parser": "1.17.1",
+    "@types/cors": "2.8.6",
+    "@types/express": "4.17.2",
+    "@types/node": "12.12.12"
   }
 }
