--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,10 +13,6 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:import/typescript",
-    "plugin:jest/recommended",
     "prettier",
     "prettier/@typescript-eslint"
   ],
@@ -26,7 +22,7 @@
     "sourceType": "module",
     "project": "tsconfig.json"
   },
-  "plugins": ["@typescript-eslint", "jest"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-use-before-define": [
@@ -35,6 +31,19 @@
         "functions": false,
         "typedefs": false
       }
+    ],
+    "@typescript-eslint/unbound-method": [
+      "error",
+      {
+        "ignoreStatic": true
+      }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["*.test.{ts,tsx,js,jsx}", "*.spec.{ts,tsx,js,jsx}"],
+      "extends": ["plugin:jest/recommended"],
+      "plugins": ["jest"]
+    }
+  ]
 }
