--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -3,7 +3,11 @@
     "browser": true,
     "node": false
   },
-  "extends": ["plugin:react/recommended", "plugin:jsx-a11y/recommended"],
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "prettier/react"
+  ],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -14,5 +18,9 @@
     "react": {
       "version": "latest"
     }
+  },
+  "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
