--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "dependencies": {
     "date-fns": "2.8.1",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-redux": "7.1.3",
     "react-router5": "7.1.0",
     "redux": "4.0.4",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "9.3.2",
-    "prop-types": "15.7.2"
+    "prop-types": "15.7.2",
+    "react-hot-loader": "4.12.18"
   }
 }
