--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@babel/plugin-transform-runtime": "7.7.4",
     "@babel/preset-env": "7.7.4",
     "@babel/preset-react": "7.7.4",
-    "@babel/preset-typescript": "7.7.4",
     "@babel/runtime": "7.7.4",
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
+    "@hot-loader/react-dom": "16.11.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
@@ -42,6 +42,9 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-hot-loader": "4.12.18",
     "rxjs": "6.5.3",
     "sql.js": "1.0.1",
     "style-loader": "1.0.0",
