build: unify build scripts

--- a/package.json
+++ b/package.json
@@ -62,10 +62,10 @@
   "scripts": {
     "start": "concurrently \"npm:start:client\" \"npm:start:server\" ",
     "build": "concurrently \"npm:build:client\" \"npm:build:server\" ",
-    "start:client": "babel-node client/scripts/start.js",
-    "start:server": "babel-node server/scripts/start.js",
-    "build:client": "babel-node client/scripts/build.js",
-    "build:server": "babel-node server/scripts/build.js",
+    "start:client": "babel-node scripts/startClient.js",
+    "start:server": "babel-node scripts/startServer.js",
+    "build:client": "babel-node scripts/buildClient.js",
+    "build:server": "babel-node scripts/buildServer.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:watchAll": "jest --watchAll",
