--- a/package.json
+++ b/package.json
@@ -25,12 +25,20 @@
     "dotenv-webpack": "1.7.0",
     "eslint": "6.7.1",
     "eslint-config-prettier": "6.7.0",
+    "eslint-import-resolver-node": "0.3.2",
+    "eslint-import-resolver-webpack": "0.11.1",
     "eslint-loader": "3.0.2",
+    "eslint-plugin-compat": "3.3.0",
+    "eslint-plugin-eslint-comments": "3.1.2",
+    "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jest": "23.0.5",
     "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-node": "10.0.0",
     "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.3.0",
+    "eslint-plugin-unicorn": "13.0.0",
     "file-loader": "5.0.2",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "3.2.0",
