--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,10 @@
     "reflect-metadata": "0.1.13",
     "typeorm": "0.2.20"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "supertest": "4.0.2"
+  },
+  "engines": {
+    "node": ">=10.16.0"
+  }
 }
