--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/node": "7.7.4",
     "@babel/plugin-proposal-class-properties": "7.7.4",
     "@babel/plugin-proposal-decorators": "7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "7.7.4",
     "@babel/plugin-transform-regenerator": "7.7.4",
     "@babel/plugin-transform-runtime": "7.7.4",
     "@babel/preset-env": "7.7.4",
