--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "jest": "24.9.0",
     "jest-transform-stub": "2.0.0",
     "lint-staged": "9.5.0",
+    "mini-css-extract-plugin": "0.8.0",
     "mysql": "2.17.1",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.7.0",
     "prettier": "1.19.1",
