--- a/client/package.json
+++ b/client/package.json
@@ -2,20 +2,19 @@
   "name": "antr-client",
   "private": true,
   "dependencies": {
+    "@loadable/component": "5.11.0",
     "date-fns": "2.8.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-redux": "7.1.3",
-    "react-router5": "7.1.0",
+    "react-router-dom": "5.1.2",
     "redux": "4.0.4",
     "refract-redux-rxjs": "1.4.1",
     "refract-rxjs": "4.2.3",
-    "router5": "7.0.2",
-    "router5-plugin-browser": "7.0.2",
     "rxjs": "6.5.3"
   },
   "devDependencies": {
-    "@testing-library/react": "9.3.2",
+    "@testing-library/react": "9.4.0",
     "prop-types": "15.7.2",
     "react-hot-loader": "4.12.18"
   }
