--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,4 @@
-hoist = false
 link-workspace-packages = false
 save-exact = true
-shamefully-hoist = false
 shared-workspace-lockfile = true
+strict-peer-dependencies = true
