--- a/package.json
+++ b/package.json
@@ -1,113 +1,57 @@
 {
-  "name": "antr",
-  "version": "0.0.0",
   "private": true,
-  "devDependencies": {
-    "@babel/core": "7.7.4",
-    "@babel/node": "7.7.4",
-    "@babel/plugin-proposal-class-properties": "7.7.4",
-    "@babel/plugin-proposal-decorators": "7.7.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "7.7.5",
-    "@babel/plugin-syntax-dynamic-import": "7.7.4",
-    "@babel/plugin-transform-regenerator": "7.7.4",
-    "@babel/plugin-transform-runtime": "7.7.4",
-    "@babel/preset-env": "7.7.4",
-    "@babel/preset-react": "7.7.4",
-    "@babel/runtime": "7.7.4",
-    "@commitlint/cli": "8.2.0",
-    "@commitlint/config-conventional": "8.2.0",
-    "@hot-loader/react-dom": "16.11.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-transform-typescript-metadata": "0.2.2",
-    "concurrently": "5.0.0",
-    "css-loader": "3.2.0",
-    "dotenv": "8.2.0",
-    "dotenv-webpack": "1.7.0",
-    "eslint": "6.7.1",
-    "eslint-config-prettier": "6.7.0",
-    "eslint-import-resolver-node": "0.3.2",
-    "eslint-import-resolver-webpack": "0.11.1",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-compat": "3.3.0",
-    "eslint-plugin-eslint-comments": "3.1.2",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jest": "23.0.5",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-node": "10.0.0",
-    "eslint-plugin-prettier": "3.1.1",
-    "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "eslint-plugin-unicorn": "13.0.0",
-    "file-loader": "5.0.2",
-    "friendly-errors-webpack-plugin": "1.7.0",
-    "html-webpack-plugin": "3.2.0",
-    "husky": "3.1.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "24.9.0",
-    "jest-transform-stub": "2.0.0",
-    "lint-staged": "9.5.0",
-    "mini-css-extract-plugin": "0.8.0",
-    "mysql": "2.17.1",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.7.0",
-    "prettier": "1.19.1",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-hot-loader": "4.12.18",
-    "rxjs": "6.5.3",
-    "sql.js": "1.0.1",
-    "style-loader": "1.0.0",
-    "stylelint": "12.0.0",
-    "stylelint-config-css-modules": "2.1.0",
-    "stylelint-config-recommended": "3.0.0",
-    "supertest": "4.0.2",
-    "terser-webpack-plugin": "2.2.1",
-    "url-loader": "3.0.0",
-    "webpack": "4.41.2",
-    "webpack-dev-middleware": "3.7.2",
-    "webpack-dev-server": "3.9.0",
-    "webpack-node-externals": "1.7.2"
-  },
-  "scripts": {
-    "start": "concurrently \"npm:start:client\" \"npm:start:server\" ",
-    "build": "concurrently \"npm:build:client\" \"npm:build:server\" ",
-    "start:client": "babel-node scripts/startClient.js",
-    "start:server": "babel-node scripts/startServer.js",
-    "build:client": "babel-node scripts/buildClient.js",
-    "build:server": "babel-node scripts/buildServer.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:watchAll": "jest --watchAll",
-    "test:coverage": "jest --coverage"
-  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
-  "lint-staged": {
-    "*.{js,html,css,json,md,yml,yaml}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ],
-    "*.css": [
-      "stylelint --fix",
-      "git add"
-    ]
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
+  },
+  "lint-staged": {
+    "*.css": [
+      "stylelint --fix"
+    ],
+    "*.js": [
+      "eslint --fix"
+    ],
+    "*.{js,html,css,json,md,yml,yaml}": [
+      "prettier --write"
+    ]
+  },
+  "devDependencies": {
+    "@commitlint/cli": "9.0.1",
+    "@commitlint/config-conventional": "9.0.1",
+    "@hot-loader/react-dom": "16.13.0",
+    "@types/react": "16.9.38",
+    "babel-eslint": "10.1.0",
+    "eslint": "7.3.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-import-resolver-node": "0.3.4",
+    "eslint-import-resolver-webpack": "0.12.2",
+    "eslint-plugin-compat": "3.7.0",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jest": "23.16.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.4",
+    "eslint-plugin-unicorn": "20.1.0",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.11",
+    "prettier": "2.0.5",
+    "react": "16.13.1",
+    "rxjs": "6.5.5",
+    "stylelint": "13.6.1",
+    "stylelint-config-css-modules": "2.2.0",
+    "stylelint-config-recommended": "3.0.0",
+    "typescript": "3.9.5",
+    "webpack": "4.43.0"
   }
 }
