--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "antr-server",
+  "name": "server",
+  "version": "0.0.0",
   "private": true,
+  "scripts": {
+    "start": "NODE_ENV=development babel-node src/index.js",
+    "test": "jest"
+  },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
@@ -8,11 +13,25 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
-    "mysql": "2.17.1",
+    "mysql": "2.18.1",
     "reflect-metadata": "0.1.13",
-    "typeorm": "0.2.20"
+    "typeorm": "0.2.25"
   },
   "devDependencies": {
+    "@babel/core": "7.10.3",
+    "@babel/node": "7.10.3",
+    "@babel/plugin-proposal-class-properties": "7.10.1",
+    "@babel/plugin-proposal-decorators": "7.10.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.10.1",
+    "@babel/plugin-proposal-optional-chaining": "7.10.3",
+    "@babel/plugin-transform-regenerator": "7.10.3",
+    "@babel/plugin-transform-runtime": "7.10.3",
+    "@babel/preset-env": "7.10.3",
+    "@babel/runtime": "7.10.3",
+    "babel-jest": "26.0.1",
+    "babel-plugin-transform-typescript-metadata": "0.3.0",
+    "jest": "26.0.1",
+    "sql.js": "1.3.0",
     "supertest": "4.0.2"
   },
   "engines": {
