--- a/client/package.json
+++ b/client/package.json
@@ -3,54 +3,70 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server",
-    "build": "NODE_ENV=production webpack",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "jest"
   },
   "dependencies": {
-    "@loadable/component": "5.12.0",
-    "date-fns": "2.14.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
-    "react-router-dom": "5.2.0",
-    "redux": "4.0.5",
-    "refract-redux-rxjs": "1.4.1",
-    "refract-rxjs": "4.2.3",
-    "rxjs": "6.5.5"
+    "@vitejs/plugin-react": "^1.0.2",
+    "autoprefixer": "^10.4.4",
+    "date-fns": "^2.14.0",
+    "postcss": "^8.4.12",
+    "postcss-preset-env": "^6.7.0",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "refract-redux-rxjs": "^1.4.1",
+    "refract-rxjs": "^4.2.3",
+    "rxjs": "^6.5.5",
+    "tailwindcss": "^3.0.0",
+    "vite": "^2.6.5"
   },
   "devDependencies": {
-    "@babel/core": "7.10.3",
-    "@babel/plugin-proposal-class-properties": "7.10.1",
-    "@babel/plugin-proposal-decorators": "7.10.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.10.1",
-    "@babel/plugin-proposal-optional-chaining": "7.10.3",
-    "@babel/preset-env": "7.10.3",
-    "@babel/preset-react": "7.10.1",
-    "@hot-loader/react-dom": "16.13.0",
-    "@testing-library/react": "10.3.0",
-    "babel-jest": "26.0.1",
-    "babel-loader": "8.1.0",
-    "clean-webpack-plugin": "3.0.0",
-    "css-loader": "3.6.0",
-    "eslint-loader": "4.0.2",
-    "file-loader": "6.0.0",
-    "friendly-errors-webpack-plugin": "1.7.0",
-    "html-webpack-plugin": "4.3.0",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "26.0.1",
-    "jest-transform-stub": "2.0.0",
-    "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.7.0",
-    "prop-types": "15.7.2",
-    "react-hot-loader": "4.12.21",
-    "style-loader": "1.2.1",
-    "terser-webpack-plugin": "3.0.6",
-    "url-loader": "4.1.0",
-    "webpack": "4.43.0",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0"
+    "@testing-library/react": "^10.3.0",
+    "babel-jest": "^27.2.5",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^26.1.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.2.5",
+    "jest-transform-stub": "^2.0.0",
+    "prettier": "^2.6.0",
+    "stylelint": "^13.13.1",
+    "stylelint-config-css-modules": "^2.2.0",
+    "stylelint-config-recommended": "^5.0.0"
+  },
+  "prettier": {},
+  "jest": {
+    "displayName": "client",
+    "testEnvironment": "jsdom",
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.js",
+      "<rootDir>/src/**/?(*.)(spec|test).js"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.css$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.js$": "babel-jest",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "jest-transform-stub"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.js$",
+      "^.+\\.css$"
+    ],
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.js"
+    ]
   }
 }
