--- a/client/package.json
+++ b/client/package.json
@@ -13,16 +13,12 @@
     "autoprefixer": "^10.4.4",
     "date-fns": "^2.14.0",
     "postcss": "^8.4.12",
-    "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "refract-redux-rxjs": "^1.4.1",
-    "refract-rxjs": "^4.2.3",
-    "rxjs": "^6.5.5",
     "tailwindcss": "^3.0.0",
     "vite": "^2.6.5"
   },
@@ -41,10 +37,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.2.5",
     "jest-transform-stub": "^2.0.0",
-    "prettier": "^2.6.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-css-modules": "^2.2.0",
-    "stylelint-config-recommended": "^5.0.0"
+    "prettier": "^2.6.0"
   },
   "prettier": {},
   "jest": {
