--- a/client/package.json
+++ b/client/package.json
@@ -6,60 +6,36 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@vitejs/plugin-react": "^1.0.2",
+    "@vitejs/plugin-react": "^1.3.1",
     "autoprefixer": "^10.4.4",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.28.0",
     "postcss": "^8.4.12",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2",
     "tailwindcss": "^3.0.0",
-    "vite": "^2.6.5"
+    "vite": "^2.9.5"
   },
   "devDependencies": {
-    "@testing-library/react": "^10.3.0",
-    "babel-jest": "^27.2.5",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-unicorn": "^42.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.5",
-    "jest-transform-stub": "^2.0.0",
-    "prettier": "^2.6.0"
+    "prettier": "^2.6.0",
+    "vitest": "^0.9.3"
   },
-  "prettier": {},
-  "jest": {
-    "displayName": "client",
-    "testEnvironment": "jsdom",
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.js",
-      "<rootDir>/src/**/?(*.)(spec|test).js"
-    ],
-    "moduleNameMapper": {
-      "^.+\\.css$": "identity-obj-proxy"
-    },
-    "transform": {
-      "^.+\\.js$": "babel-jest",
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "jest-transform-stub"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.js$",
-      "^.+\\.css$"
-    ],
-    "collectCoverageFrom": [
-      "<rootDir>/src/**/*.js"
-    ]
-  }
+  "prettier": {}
 }
